[package]
name = "s3po"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.1"
minio = "0.1.0"
serde = "1.0.197"
serde_derive = "1.0.197"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
