[package]
name = "s3po"
version = "0.1.1"
edition = "2021"
description = "S3 client"
license = "MIT"

[package.metadata.deb]
maintainer = "Stanislav Saveliev <ioustamora@gmail.com>"
copyright = "2024, Stanislav Saveliev <ioustamora@gmail.com>"
extended-description = """\
S3 compatible client with encryption / decryption on the fly"""
depends = "$auto"
section = "utility"

[dependencies]
confy = "0.6.1"
minio = "0.1.0"
serde = "1.0.197"
serde_derive = "1.0.197"
tokio = { version = "1", features = ["full"] }
colored = "2.1.0"
rand = "0.8.5"
mnemonic = "1.0.1"
ecies = {version = "0.2.6", default-features = false, features = ["xchacha20"]}
libsecp256k1 = "0.7.1"
bs58 = "0.5.0"
chacha20poly1305 = "0.10.1"
rust-argon2 = "2.1.0"
generic-array = "0.14.7"
chrono = "0.4.37"
